manifests/dr-kube-agent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dr-kube-agent
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - host: agent-drkube.huik.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dr-kube-agent
                port:
                  number: 8080
